# https---github.com-lvzili-payslip

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-release.yml  build-windows.yml
.trae/skills/prd/: SKILL.md
.trae/skills/prd/assets/: .gitkeep
.trae/skills/prd/scripts/: .gitkeep
docs/: 工资条模版.xlsx
scripts/: build-macos.sh  build-release.sh  build-windows.sh  check-macos-signing.sh  notarize-dmg.sh
src/: App.tsx  payslip.ts  runtime.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
